# qmidiarp

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  configure-qmake.sh  configure.ac  demo.qma  install-qmake.sh  qmidiarp.appdata.xml  qmidiarp.desktop  qmidiarp.pro
.github/workflows/: autotools-single-platform.yml  cmake-single-platform.yml
dox/: Makefile.am
examples/: CMakeLists.txt  Makefile.am  demo.qma  demo.qmax  demo_seqlfo.qmax  demo_seqlfo2.qmax  demo_up_down.qma  demo_up_down.qmax  old_arp.qma  old_arp.qmax  test.qma
man/: CMakeLists.txt  Makefile.am  qmidiarp.1
man/de/: Makefile.am  qmidiarp.1
man/fr/: Makefile.am  qmidiarp.1
qmidiarp_arp.lv2/: CMakeLists.txt  manifest.ttl  qmidiarp_arp.ttl  qmidiarp_arp_ui.ttl
qmidiarp_lfo.lv2/: CMakeLists.txt  manifest.ttl  qmidiarp_lfo.ttl  qmidiarp_lfo_ui.ttl
qmidiarp_seq.lv2/: CMakeLists.txt  manifest.ttl  qmidiarp_seq.ttl  qmidiarp_seq_ui.ttl
src/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  arpdata.cpp  arpdata.h  arpscreen.cpp  arpscreen.h  arpwidget.cpp  arpwidget.h  arpwidget_lv2.cpp  arpwidget_lv2.h  arpwidget_lv2_rtk.c  arpwidget_lv2_rtk.h  cmake_config.h.in  cursor.cpp  cursor.h  driverbase.h  engine.cpp  engine.h  globstore.cpp  globstore.h  groovewidget.cpp  groovewidget.h  gui.cpp  gui.h  indicator.cpp  indicator.h  inoutbox.cpp  inoutbox.h  jackdriver.cpp  jackdriver.h  jacksync.cpp  jacksync.h  lfoscreen.cpp  lfoscreen.h  lfowidget.cpp  lfowidget.h  lfowidget_lv2.cpp  lfowidget_lv2.h  (+71 more)
src/pixmaps/: Makefile.am  arpadd.xpm  arpremove.xpm  arprename.xpm  editmodeon.xpm  eventlog.xpm  filenew.xpm  fileopen.xpm  filequit.xpm  filesave.xpm  filesaveas.xpm  formsave.xpm  globtog.xpm  groovetog.xpm  iopanelhide.xpm  iopanelshow.xpm  jacktr.xpm  latchmodeon.xpm  lfoadd.xpm  lfowavcp.xpm  lfowcustm.xpm  lfowflip.xpm  lfowsawdn.xpm  lfowsawup.xpm  lfowsine.xpm  lfowsquare.xpm  lfowtri.xpm  midiclock.xpm  midicontrol.xpm  patternremove.xpm  patternstore.xpm  play.xpm  qmidiarp2.xpm  randomtoggle.xpm  seqadd.xpm  seqrecord.xpm  seqwavcp.xpm  settings.xpm
src/translations/: CMakeLists.txt  qmidiarp_cs.ts  qmidiarp_de.ts  qmidiarp_es.ts  qmidiarp_fr.ts
